ultimos cambios listos

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </form>
       </div>
 
-      <div class="popup popup__image">
+      <div class="popup popup_image">
         <div class="popup__overlay"></div>
         <div class="popup__image-container">
           <button
