listo primera revision sprint 8

--- a/index.html
+++ b/index.html
@@ -120,7 +120,6 @@
         </div>
       </div>
     </template>
-    <script src="./index.js"></script>
-    <script src="./validate.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
