--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           type="button"
           class="popup__close-button popup__close-button_image"
         ></button>
-        <img src=" " alt=" " class="popup__picture" />
+        <img src=" " alt="" class="popup__picture" />
         <h4 class="popup__card-name"></h4>
       </div>
     </div>
@@ -120,6 +120,6 @@
         </div>
       </div>
     </template>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
