--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           class="popup__input popup__input_link"
         />
         <span class="popup__line" id="input__error-link"></span>
-        <button type="submit" class="popup__save-button">Crear</button>
+        <button disabled type="submit" class="popup__save-button">Crear</button>
       </form>
     </div>
 
