ajustes de rutas

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <body class="page">
     <header class="header">
       <img
-        src="<%=require(./images/headerlogo.svg)%>"
+        src="<%=require('./images/headerlogo.svg')%>"
         alt="encabezado"
         class="header__logo"
       />
@@ -16,7 +16,7 @@
     </header>
     <section class="profile">
       <img
-        src="<%=require(./images/profilephoto.jpg)%>"
+        src="<%=require('./images/profilephoto.jpg')%>"
         alt="foto de perfil"
         class="profile__picture"
       />
