--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Around the US</title>
-    <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body class="page">
     <header class="header">
       <img
-        src="./images/headerlogo.svg"
+        src="<%=require(./images/headerlogo.svg)%>"
         alt="encabezado"
         class="header__logo"
       />
@@ -17,7 +16,7 @@
     </header>
     <section class="profile">
       <img
-        src="./images/profilephoto.jpg"
+        src="<%=require(./images/profilephoto.jpg)%>"
         alt="foto de perfil"
         class="profile__picture"
       />
@@ -120,6 +119,5 @@
         </div>
       </div>
     </template>
-    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
