cambios para cards

--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,13 @@
           class="popup__input popup__input_link"
         />
         <span class="popup__line" id="input__error-link"></span>
-        <button disabled type="submit" class="popup__save-button">Crear</button>
+        <button
+          disabled
+          type="submit"
+          class="popup__save-button popup__save-button_picture"
+        >
+          Crear
+        </button>
       </form>
     </div>
 
@@ -141,7 +147,12 @@
       <form class="popup__content popup__content_profile">
         <button type="button" class="popup__close-button"></button>
         <h4 class="popup__title popup__title_picture">¿Estás seguro/a?</h4>
-        <button type="submit" class="popup__save-button">Si</button>
+        <button
+          type="submit"
+          class="popup__save-button popup__save-button_delete"
+        >
+          Si
+        </button>
       </form>
     </div>
 
@@ -153,7 +164,7 @@
           <button class="elements__trash"></button>
           <div class="elements__like-wrapper">
             <button class="elements__heart"></button>
-            <span class="elements__like">0</span>
+            <span class="elements__like"></span>
           </div>
         </div>
       </div>
