--- a/src/index.html
+++ b/src/index.html
@@ -134,7 +134,11 @@
             class="popup__input popup__input_link"
           />
           <span class="popup__line" id="input__error-link"></span>
-          <button disabled type="submit" class="popup__save-button">
+          <button
+            disabled
+            type="submit"
+            class="popup__save-button popup__save-button_avatar"
+          >
             Guardar
           </button>
         </div>
