Commit final antes de revision

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
     <section class="elements"></section>
 
     <footer class="footer">
-      <h4 class="footer__copyright">&#169; 2023 Around The U.S.</h4>
+      <h4 class="footer__copyright">&#169; 2024 Around The U.S.</h4>
     </footer>
 
     <div class="popup">
@@ -148,7 +148,7 @@
     <!-- Popup eliminar foto -->
     <div class="popup popup_erase-photo">
       <div class="popup__overlay"></div>
-      <form class="popup__content popup__content_profile">
+      <form class="popup__content popup__content_card">
         <button type="button" class="popup__close-button"></button>
         <h4 class="popup__title popup__title_picture">¿Estás seguro/a?</h4>
         <button
