cambio de ID en span

--- a/src/index.html
+++ b/src/index.html
@@ -126,14 +126,14 @@
         <div class="popup__wrapper">
           <input
             type="url"
-            name="link"
+            name="picture"
             id="popup__avatar-input"
             placeholder="Imágen de perfil"
             minlength="7"
             required
             class="popup__input popup__input_link"
           />
-          <span class="popup__line" id="input__error-link"></span>
+          <span class="popup__line" id="input__error-picture"></span>
           <button
             disabled
             type="submit"
